hphp/test/slow/coeffects/parse-ctx-const-2.php.expectf
Fatal error: Context constants cannot alias polymorphic contexts in %s on line 4
